# medkg_prj

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE-CODE  LICENSE-DATA  MEDKG_VECTORSTORE_SPEC.md  NOTICE  README.md  plan_18_06_2026.md  pyproject.toml  requirements.txt  spec.md  test.ipynb
FE/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
RAG/: build_vector_store.py  embeddings.py  hybrid_retriever.py  vector_db.py  vector_store.py
agents/: base_agent.py  disease_profiler.py  evidence_harvester.py  knowledge_extractor.py  orchestrator.py  quality_controller.py
api/: main.py
chronomedkg/: __init__.py  loader.py
config/: default.yaml  qa_inference.yaml
core/: batch_llm.py  credibility_scorer.py  entity_normalizer.py  models.py  retrieval.py  retrieval_index.py  schema_alignment.py  temporal_reasoner.py
docs/: clinician_evaluation_questionnaire.md  decision_log.md  implementation_flow.md  literature_survey_march2026.md  phase1_validation.md
retrieval/: bioasq_snippet_loader.py  build_vector_store.py  hybrid_retriever.py  textbook_chunker.py
scripts/: audit_critical_numbers.py  audit_primekg.py  build_ontology_crosswalk.py  build_tqa_v6.py  cleanup_tqa_benchmark.py  cleanup_triples.py  compute_cross_kg_benchmark.py  compute_temporal_validation.py  corrected_validation_metrics.py  deep_validation_analysis.py  download_and_consensus.py  error_taxonomy.py  error_taxonomy_v2.py  experiment_coverage_gap.py  experiment_evidence_decay.py  experiment_hdbscan_sensitivity.py  experiment_link_prediction.py  experiment_link_prediction_b3_coarsen.py  experiment_link_prediction_seeds.py  experiment_link_prediction_v2.py  experiment_link_prediction_v3.py  hf_upload.py  (+38 more)
(+70 files in other folders)
