[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronomedkg"
version = "0.0.1"
description = "Temporally-grounded biomedical knowledge graph and benchmark for clinical reasoning"
readme = "README.md"
authors = [
    {name = "Md Shamim Ahmed", email = "shamim@imada.sdu.dk"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "knowledge-graph",
    "biomedical",
    "temporal",
    "rare-disease",
    "benchmark",
    "PrimeKG",
    "ChronoTQA",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
pipeline = [
    "openai>=2.9",
    "anthropic>=0.75",
    "google-generativeai>=0.8",
    "rapidfuzz>=3.14",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://gitlab.sdu.dk/screen4care/chronomedkg"
Repository = "https://gitlab.sdu.dk/screen4care/chronomedkg"
Dataset = "https://doi.org/10.5281/zenodo.19697542"
Issues = "https://gitlab.sdu.dk/screen4care/chronomedkg/-/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronomedkg*"]
exclude = [
    "agents*",
    "core*",
    "scripts*",
    "tests*",
    "evaluation*",
    "config*",
    "data*",
    "docs*",
]
